# logprobs-mt-qe

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  QElogprob.json  README.md  analyse_qe_sample.py  batch_translate.py  compare_candidates.py  example_qe.py  lib_mt_confidence.py  lib_prompt_logprobs.py  pyproject.toml  score_json.py  score_live.py  translate.py
.github/workflows/: lint.yml
demos/data/: ptbr_single.txt
demos/mt/: translate_with_confidence.py
demos/qe/: agreement.py  average_logprob.py  entropy.py  low_confidence_spans.py  margin.py  rank_candidates.py  sample_ptbr_en.py  weakest_span.py
docs/: signals.md
examples/: 01_average_logprob.py  02_weakest_span.py  03_entropy.py  04_margin.py  05_low_confidence_spans.py  06_agreement.py  07_translate_with_confidence.py
mt/: batch_translate.py  lib_mt_confidence.py  translate.py
mt/presets/: v01_heuristic.py
notebooks/: calibrate_against_mqm.ipynb
qe/: compare_candidates.py  lib_prompt_logprobs.py  score_json.py  score_live.py
