[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mt-qe-logprobs"
version = "0.1.0"
description = "Logprob-based confidence scoring for machine translation — MT and QE modes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["machine-translation", "quality-estimation", "logprobs", "vllm", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Linguistic",
]
